--- a/core/app/views/Inbounds/edit.html
+++ b/core/app/views/Inbounds/edit.html
@@ -3,7 +3,7 @@
 #{set 'moreScripts'}
     #{script 'inbounds/edit.js'/}
 #{/set}
-<style>
+<style type="text/css">
   .table td{
     vertical-align:middle;
   }
