--- a/core/app/views/Inbounds/index.html
+++ b/core/app/views/Inbounds/index.html
@@ -132,7 +132,7 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4>包装信息</h4>
+        <h4 class="modal-title">包装信息</h4>
       </div>
       <div class="modal-body">
         <div id="refresh_div"></div>
