--- a/core/app/views/Materials/index.html
+++ b/core/app/views/Materials/index.html
@@ -23,6 +23,14 @@
         #{/list}
         </select>
 
+        <select name="p.status" style="width: 100px;" class="inline">
+          <option value="">物料状态</option>
+        #{list items:models.view.post.MaterialPost.S.values(), as:'d'}
+          <option value="${d.name()}" ${d.name() == p.status?.name()? 'selected' : ''}>${d.label()}</option>
+        #{/list}
+        </select>
+
+
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
           <input type="text" style="width:220px;" name="p.search" placeholder="物料编码 or 物料名称 or 规格 or 工艺 or 工厂物料代码" value="${p.search}">
@@ -66,8 +74,14 @@
             <td>${m.nowPurchasePlanPrice()}</td>
             <td>
               <a href="@{Materials.edit(m.id)}" class="btn btn-mini btn-primary">编辑</a>
-              <a href="javascript:void(0)" data-url='@{Materials.deleteMaterial(m.id)}' uid="${m.id}"
-                 name="delBtn" class="btn btn-mini btn-danger">下架</a>
+                #{if m.isDel}
+                  <a href="javascript:void(0)" data-url='@{Materials.deleteMaterial(m.id)}' msg='确定上架数据吗'
+                     uid="${m.id}" name="delBtn" class="btn btn-mini btn-success">上架</a>
+                #{/if}
+                #{else }
+                  <a href="javascript:void(0)" data-url='@{Materials.deleteMaterial(m.id)}'  msg='确定下架数据吗'
+                     uid="${m.id}" name="delBtn" class="btn btn-mini btn-danger">下架</a>
+                #{/else}
             </td>
           </tr>
         #{/list}
