--- a/core/app/views/Application/topTenSkuByMarket.html
+++ b/core/app/views/Application/topTenSkuByMarket.html
@@ -10,7 +10,8 @@
   <span class="progress-number"><b>${a.day1}</b>/${a.day7}</span>
 
   <div class="progress sm">
-    <div class="progress-bar ${models.view.dto.AnalyzeDTO.indexColor[a_index%4]}" style="width: ${a.day1*100/a.day7}%"></div>
+    <div class="progress-bar ${models.view.dto.AnalyzeDTO.indexColor[a_index%4]}"
+         style="width: ${a.day1*100/(a.day7==0?1:a.day7)}%"></div>
   </div>
 </div>
 #{/list}
