--- a/core/app/views/Orders/_order_table_tr.html
+++ b/core/app/views/Orders/_order_table_tr.html
@@ -1,18 +1,18 @@
 <tr>
     <th>Market</th>
-    <th>Fees Percent(USD)</th>
+    <th style="width:180px;">Fees Percent(USD)</th>
     <th>Address1</th>
     <th>Country</th>
-    <th rel="popover" title="数字是什么?" content="(a | b), a: 订单重销售产品的个数. b: 支付信息个数">
+    <th rel="popover" title="数字是什么?" content="(a | b), a: 订单重销售产品的个数. b: 支付信息个数" style="width:200px;">
         <i class="icon-question-sign"></i> OrderId
     </th>
     <th>Buyer</th>
     <th>SKU</th>
     <th style="width:100px;">PromotionIDs</th>
     <th>Email</th>
-    <th>Create</th>
-    <th>ShipDate</th>
-    <th>Payment</th>
+    <th style="width:90px;">Create</th>
+    <th style="width:90px;">ShipDate</th>
+    <th style="width:90px;">Payment</th>
     <th>State</th>
     <th>Invoice</th>
 </tr>
@@ -21,7 +21,7 @@
     <td>${ord.market.countryName()}</td>
     <td data-toggle="toggle" data-target="#order_index_${ord_index}">
         <i class="icon-reorder"></i>
-        <span class="badge badge-info">${ord?.fees?.size()}</span>
+        <span class="badge bg-light-blue">${ord?.fees?.size()}</span>
         #{set percent: (ord.totalMarketFee() / ord.totalUSDSales())/}
         #{if percent >= 0.25}
             <span style="color:red">${percent.format("#.##%")}</span>
