--- a/core/app/views/Cooperators/_mat_items.html
+++ b/core/app/views/Cooperators/_mat_items.html
@@ -21,9 +21,9 @@
     <td>${itm.material?.name}</td>
     <td>${itm.material?.type?.label()}</td>
     <td></td>
-    <td>${itm.material?.specification}</td>
-    <td>${itm.material?.technology}</td>
-    <td>${itm.material?.version}</td>
+    <td title="${itm.material?.specification}" rel="tooltip">${itm.material?.specification.xxLong()}</td>
+    <td title="${itm.material?.technology}" rel="tooltip">${itm.material?.technology.overLong()}</td>
+    <td title="${itm.material?.version}" rel="tooltip">${itm.material?.version.overLong()}</td>
     <td>${itm.price.format('#.##')} ${itm.currency}</td>
     <td>${itm.period}</td>
     <td>${itm.boxSize}</td>
