--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -25,6 +25,12 @@
         <input type="date" name="p.to" value="${p.to.date()}">
       </div>
 
+      <select name="p.dateType" class="inline">
+      #{list items:models.view.post.OutboundPost.DateType.values(), as:'d'}
+        <option value="${d.name()}" ${d.name() == p.dateType?.name()? 'selected' : ''}>${d.label()}</option>
+      #{/list}
+      </select>
+
       <select name="p.status" class="inline">
         <option value="">状态</option>
       #{list items:models.whouse.Outbound.S, as:'s'}
@@ -127,6 +133,7 @@
               <th width="100px;">出库日期</th>
               <th width="80px;">发货人</th>
               <th>创建人</th>
+              <th>创建时间</th>
               <th width="200px;">备注</th>
             </tr>
           #{list items: outbounds, as: 'o'}
@@ -147,6 +154,7 @@
               <td>#{time_tooltip time:o.outboundDate/}</td>
               <td>${o.consignor?.username}</td>
               <td>${o.creator?.username}</td>
+              <td>#{time_tooltip time:o.createDate/}</td>
               <td title="${o.memo}">${o.memo.overLong()}</td>
             </tr>
 
