--- a/core/app/views/Application/index_v3.html
+++ b/core/app/views/Application/index_v3.html
@@ -99,7 +99,7 @@
   <input type="hidden" id="a_from" name="p.from" value="${p.from.date()}">
   <input type="hidden" id="a_to" name="p.to" value="${p.to.date()}">
   <input type="hidden" name="p.type" value="sid">
-  <input type="hidden" id="sellingId" value="">
+  <input type="hidden" id="sellingId" name="p.val" value="">
 </form>
 
 
