--- a/core/app/views/StockRecords/stockIndexB2B.html
+++ b/core/app/views/StockRecords/stockIndexB2B.html
@@ -1,4 +1,4 @@
-#{extends 'main_full.html' /}
+#{extends 'main_full_v3.html' /}
 #{set title:"库存管理"  /}
 #{set 'moreStyles'}
     #{stylesheet 'bootstrap-multiselect.css'/}
@@ -13,84 +13,87 @@
     vertical-align:middle;
   }
 </style>
+
 #{errorMsgs /}
 #{flash_alert /}
 
-<div class="row-fluid">
-  <form action="@{StockRecords.stockIndex()}" method="get" class="search_form" id="search_Form">
-    <div class="span12">
-      <div class="input-prepend inline">
-        <select name="p.whouses" multiple="multiple" id="whouse">
-        #{list items:whouses, as:'w'}
-          <option value="${w.id}" ${p.whouses.contains(w.id) ? 'selected' : ''}>${w.name}</option>
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <div class="box-header with-border">
+        <form action="@{StockRecords.stockIndex()}" method="get" class="form-inline" id="search_Form">
+          <select name="p.whouses" multiple="multiple" id="whouse" class="form-control">
+          #{list items:whouses, as:'w'}
+            <option value="${w.id}" ${p.whouses.contains(w.id) ? 'selected' : ''}>${w.name}</option>
+          #{/list}
+          </select>
+
+          <div class="input-group">
+            <div class="input-group-addon"><i class="icon-search"></i></div>
+            <input type="text" style="width:300px;" name="p.search" placeholder="SKU,采购计划ID,FBA" value="${p.search}" class="form-control">
+            <input type="hidden" name="p.page" value="${p.page}">
+          </div>
+
+          <button class="btn btn-primary" data-loading>搜索</button>
+          <a href="javascript:void(0)" data-url="@{Excels.exportInventoryManagement()}"
+             class="btn btn-success" id="exportBtn"><i class="icon-download-alt"></i> 导出</a>
+        </form>
+      </div>
+
+      <div class="box-body">
+        <table class="table table-condensed table-bordered">
+          <tr>
+            <th width="110px;">仓库</th>
+            <th width="70px;">采购ID</th>
+            <th width="160px;">SKU</th>
+            <th width="500px;">名称</th>
+            <th width="50px;">入库数</th>
+            <th width="70px;">可用库存</th>
+            <th width="70px;">不良品数</th>
+            <th width="90px;">预计收货时间</th>
+            <th width="90px;">实际收货时间</th>
+            <th width="60xp;">项目名称</th>
+            <th width="160px;">操作</th>
+          </tr>
+        #{list items: units, as: 'u'}
+          <tr>
+            <td>${u.currWhouse?.name}</td>
+            <td>${u.id}</td>
+            <td>${u.sku}</td>
+            <td rel="tooltip" title="${u.product?.abbreviation}">${u.product?.abbreviation}</td>
+            <td>${u.inboundQty}</td>
+            <td>${u.availableQty}</td>
+            <td>${u.unqualifiedQty}</td>
+            <td>#{time_tooltip time:u.attrs.planDeliveryDate/}</td>
+            <td>#{time_tooltip time:u.attrs.deliveryDate/}</td>
+            <td>${u.projectName}</td>
+            <td>
+              <a href="@{StockRecords.changeRecords(u.id)}" class="btn btn-xs btn-primary">
+                <i class="icon-list-alt"></i> 异动记录</a>
+                #{power.ck 'stockrecords.adjuststock'}
+                  <a href="@{StockRecords.adjustStock(u.id)}" class="btn btn-xs btn-warning">
+                    <i class="icon-share-alt"></i> 库存调整</a>
+                #{/power.ck}
+            </td>
+          </tr>
         #{/list}
-        </select>
+          <tr>
+            <td colspan="13">
+
+            </td>
+          </tr>
+        </table>
       </div>
 
-      <div class="input-prepend input-append inline">
-        <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" style="width:300px;" name="p.search" placeholder="SKU,采购计划ID,FBA" value="${p.search}">
-        <input type="hidden" name="p.page" value="${p.page}">
-        <button class="btn btn-primary" data-loading>搜索</button>
-      </div>
-
-      <div class="input-prepend input-append inline">
-        <a href="javascript:void(0)" data-url="@{Excels.exportInventoryManagement()}"
-           class="btn btn-info" id="exportBtn">导出</a>
+      <div class="box-footer">
+      #{if units.size() == 0}
+        暂时还没有库存记录
+      #{/if}
+      #{else }
+          #{bootstrap_pager_v3 pi:p, url:'' /}
+      #{/else}
       </div>
     </div>
-  </form>
-</div>
-
-<div class="row-fluid">
-  <div class="span12">
-    <table class="table table-condensed table-bordered">
-      <tr>
-        <th width="110px;">仓库</th>
-        <th width="70px;">采购计划ID</th>
-        <th width="160px;">SKU</th>
-        <th width="500px;">名称</th>
-        <th width="50px;">入库数</th>
-        <th width="60px;">可用库存</th>
-        <th width="60px;">不良品数</th>
-        <th width="90px;">预计收货时间</th>
-        <th width="90px;">实际收货时间</th>
-        <th width="60xp;">项目名称</th>
-        <th width="200px;">操作</th>
-      </tr>
-    #{list items: units, as: 'u'}
-      <tr>
-        <td>${u.currWhouse?.name}</td>
-        <td>${u.id}</td>
-        <td>${u.sku}</td>
-        <td rel="tooltip" title="${u.product?.abbreviation}">${u.product?.abbreviation}</td>
-        <td>${u.inboundQty}</td>
-        <td>${u.availableQty}</td>
-        <td>${u.unqualifiedQty}</td>
-        <td>#{time_tooltip time:u.attrs.planDeliveryDate/}</td>
-        <td>#{time_tooltip time:u.attrs.deliveryDate/}</td>
-        <td>${u.projectName}</td>
-        <td>
-          <a href="@{StockRecords.changeRecords(u.id)}" class="btn btn-mini btn-info">
-            <i class="icon-list-alt"></i>异动记录</a>
-            #{power.ck 'stockrecords.adjuststock'}
-              <a href="@{StockRecords.adjustStock(u.id)}" class="btn btn-mini btn-warning">
-                <i class="icon-share-alt"></i> 库存调整</a>
-            #{/power.ck}
-        </td>
-      </tr>
-    #{/list}
-      <tr>
-        <td colspan="13">
-        #{if units.size() == 0}
-          暂时还没有库存记录
-        #{/if}
-        #{else }
-            #{bootstrap_pager pi:p, url:'' /}
-        #{/else}
-        </td>
-      </tr>
-    </table>
   </div>
 </div>
 
