--- a/core/app/views/Secure/layout.html
+++ b/core/app/views/Secure/layout.html
@@ -1,13 +1,33 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <title>Login</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
-    #{stylesheet 'bootstrap.min.css'/}
-    <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/secure.css'}"/>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>AdminLTE 2 | Log in</title>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <link rel="stylesheet" href="/public/stylesheets/bootstrap3/bootstrap.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="/public/stylesheets/bootstrap3/blue.css">
+  <link rel="stylesheet" href="/public/stylesheets/bootstrap3/AdminLTE.css">
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </head>
-<body>
+<body class="hold-transition login-page">
+
 #{doLayout /}
+
+<script src="/public/javascripts/bootstrap3/jquery-2.2.3.min.js"></script>
+<script src="/public/javascripts/bootstrap3/bootstrap.min.js"></script>
+<script src="/public/javascripts/bootstrap3/icheck.min.js"></script>
+<script>
+  $(function () {
+    $('input').iCheck({
+      checkboxClass: 'icheckbox_square-blue',
+      radioClass: 'iradio_square-blue',
+      increaseArea: '20%' // optional
+    });
+  });
+</script>
 </body>
 </html>
