--- a/core/app/views/Secure/login.html
+++ b/core/app/views/Secure/login.html
@@ -1,39 +1,37 @@
 #{extends 'Secure/layout.html' /}
 
 <div id="login">
-
-    <h1>&{'secure.title'}</h1>
-
-#{form @authenticate()}
-
+  <div class="login-box">
+    <div class="login-box-body">
+      <p class="login-box-msg">Sign in to start your session</p>
     #{if flash.error}
-        <p class="alert alert-error">
-        &{flash.error}
-        </p>
-    #{/if}
-    #{if flash.success}
-        <p class="alert alert-success">
-        &{flash.success}
-        </p>
+      <p style="color:red;">
+      ${messages.get(flash.error)}
+      </p>
     #{/if}
 
-    <p id="username-field">
-        <label for="username">&{'secure.username'}</label>
-        <input type="text" name="username" id="username" value="${flash.username}" autocomplete="off"/>
-    </p>
-
-    <p id="password-field">
-        <label for="password">&{'secure.password'}</label>
-        <input type="password" name="password" id="password" value=""/>
-    </p>
-
-    <p id="remember-field">
-        <label for="remember" class="checkbox inline">&{'secure.remember'}</label>
-        <input type="checkbox" name="remember" id="remember" value="true" ${flash.remember ? 'checked="true"' : ''} />
-    </p>
-
-    <p id="signin-field">
-        <button type="submit" id="signin" class="btn btn-primary">&{'secure.signin'}</button>
-    </p>
-#{/form}
+      <form action="@{authenticate()}" method="post">
+        <div class="form-group has-feedback">
+          <input class="form-control" placeholder="用户名" name="username" id="username" value="${flash.username}">
+          <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+        </div>
+        <div class="form-group has-feedback">
+          <input type="password" class="form-control" placeholder="Password" name="password" id="password" value="">
+          <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+        </div>
+        <div class="row">
+          <div class="col-xs-8">
+            <div class="checkbox icheck">
+              <label>
+                <input type="checkbox" name="remember" id="remember" value="true" ${flash.remember ? 'checked="true"' : ''}> Remember Me
+              </label>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
