--- a/core/app/views/Products/_products.html
+++ b/core/app/views/Products/_products.html
@@ -54,16 +54,16 @@
         <td>#{time_tooltip time:prod.marketTime/}</td>
         <td>#{time_tooltip time:prod.delistingTime/}</td>
         <td>
-          <a href="javascript:void(0);" id="copyBtn" class="btn btn-xs btn-success" rel="tooltip" title="同步"
+          <a href="javascript:void(0);" name="copyBtn" class="btn btn-xs btn-success" rel="tooltip" title="同步"
              data-sku="${prod.sku}">
             <i class="icon-refresh"></i>
           </a>
-          <a href="javascript:void(0);" id="backupBtn" class="btn btn-xs btn-info" rel="tooltip" title="复制"
+          <a href="javascript:void(0);" name="backupBtn" class="btn btn-xs btn-info" rel="tooltip" title="复制"
              data-sku="${prod.sku}" data-family="${prod.family?.family}">
             <i class="icon-copy"></i>
           </a>
             #{power.ck "products.destroy"}
-              <a href="javascript:void(0);" id="deleteBtn" class="btn btn-xs btn-danger" rel="tooltip" title="删除"
+              <a href="javascript:void(0);" name="deleteBtn" class="btn btn-xs btn-danger" rel="tooltip" title="删除"
                  data-sku="${prod.sku}"><i class="icon-trash"></i></a>
             #{/power.ck}
           <a href="" class="btn btn-xs btn-warning" rel="tooltip" title="物料配置">
